Add permalink code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 	<script src="./leaflet-overpass-layer/dist/OverPassLayer.bundle.js"></script>
+	<script src="./leaflet-hash/leaflet-hash.js"></script>
 
 
 </head>
