--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
    crossorigin=""></script>
 	<script src="./leaflet-overpass-layer/dist/OverPassLayer.bundle.js"></script>
 	<script src="./leaflet-hash/leaflet-hash.js"></script>
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+		}
+		html, body, #map {
+			height: 100%;
+			width: 100vw;
+		}
+	</style>
 </head>
 <body>
 	<div id="map"></div>
